--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ Start Powerup }}.</h2>
+<h3>{{ New system when the ideia is very wellcome }}</h3>
 
-<p>Esta aplicação gerencia vestibulares.</p>
+<p>This is a nice Start Up, cause that idea is amazing for word about technologys.</p>
 
 {% endblock %}
