--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2>{{ Start Powerup }}.</h2>
-<h3>{{ New system when the ideia is very wellcome }}</h3>
+<h2>{{ title }}.</h2>
+<h3>{{ message }}</h3>
 
 <p>This is a nice Start Up, cause that idea is amazing for word about technologys.</p>
 
